✨ feat: 引入路由并配置菜单权限

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,2 +1,2 @@
-@use './assets/styles/base.scss';
-@use './assets/styles/common.scss';
+@import '@/assets/styles/base.scss';
+@import '@/assets/styles/common.scss';
